[project]
name = "prolific-test"
version = "0.1.0"
description = "Prolific Data Engineer Assessment - Pulling stock data from Polygon API"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "polars (==1.31.0)",
    "polygon-api-client (==1.15.3)",
    "pandera (==0.25.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
